# ntv3_ft

./: .gitignore  README.md  collect_sweep.py  config.json  config.toml  curves.py  data.py  final_plot.py  finetune.py  launch_sweep.sh  plot_curves.py  pyproject.toml  run_finetune.sbatch  run_finetune_proto.sbatch  run_sweep.sbatch  verify_test.py
