[project]
name = "ntv3-ft"
version = "0.1.0"
requires-python = ">=3.12"
description = "Standalone NTv3 (pretrained, conv-tower-only) fine-tuning on Jores21 plant STARR-seq"

# usage:
#   conda create -n ntv3_ft python=3.12 -y
#   conda activate ntv3_ft
#   pip install -e .

dependencies = [
    "jax[cuda12]==0.9.2",
    "flax>=0.11",
    "optax",
    "chex",
    "jaxtyping",

    # backbone — pretrained model factory + tokenizer
    "nucleotide_transformer @ git+https://github.com/instadeepai/nucleotide-transformer.git",

    # PyTorch DataLoader only — collate returns numpy, training runs in JAX
    "torch",

    # weight + data downloads
    "huggingface-hub",
    "transformers>=4.40",
    "safetensors",

    # data + metrics
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
